[package]
name = "ts-mullvad-signer"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hansen <alex@bitzero.me"]
license = "GPL-3"
readme = "README.md"
rust-version = "1.78.0"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
indicatif = "0.17.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
